crates/oxc_semantic/tests/snapshots/cfg__cfg_files@function_as_expression.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/function_as_expression.js
---
digraph {
    0 [ label = ""]
    1 [ label = ""]
    2 [ label = "$0 = Function{}\n$1 = $0.length"]
    3 [ label = ""]
    4 [ label = "$2 = Function{}\n$3 = typeof $2"]
    5 [ label = ""]
    6 [ label = "$4 = Function{}\n$5 = $4()"]
    7 [ label = ""]
    8 [ label = "$7 = Function{}\n$6 = $7()\n$8 = TaggedTemplateMadeWithExpressions{}\n$9 = TaggedTemplate(tag=$6, template=$8)"]
    9 [ label = ""]
    10 [ label = "$10 = Function{}\n$11 = TaggedTemplateMadeWithExpressions{}\n$12 = TaggedTemplate(tag=$10, template=$11)"]
    11 [ label = ""]
    12 [ label = "$13 = Function{}\n$14 = new $13()"]
    13 [ label = ""]
    14 [ label = "$15 = Function{}\n$16 = Reference(<a>)"]
    15 [ label = ""]
    16 [ label = "$18 = Function{}"]
    17 [ label = "$19 = Reference(<b>)\n$20 = $18 || $19"]
    18 [ label = "$17 = $18"]
    19 [ label = "$21 = $16 = $17"]
    20 [ label = ""]
    21 [ label = "$22 = Function{}"]
    22 [ label = "$23 = Reference(<a>)\n$25 = $22 && $23"]
    23 [ label = "$24 = $22"]
    24 [ label = "$26 = Reference(<a>)"]
    25 [ label = ""]
    26 [ label = "$27 = Function{}\n$28 = $26 + $27"]
    27 [ label = ""]
    28 [ label = "$29 = Function{}\n$30 = new $29()"]
    0 -> 1 [ ]
    0 -> 2 [ ]
    2 -> 3 [ ]
    2 -> 4 [ ]
    4 -> 5 [ ]
    4 -> 6 [ ]
    6 -> 7 [ ]
    6 -> 8 [ ]
    8 -> 9 [ ]
    8 -> 10 [ ]
    10 -> 11 [ ]
    10 -> 12 [ ]
    12 -> 13 [ ]
    12 -> 14 [ ]
    14 -> 15 [ ]
    14 -> 16 [ ]
    14 -> 18 [ ]
    14 -> 17 [ ]
    17 -> 19 [ ]
    18 -> 19 [ ]
    19 -> 20 [ ]
    19 -> 21 [ ]
    19 -> 23 [ ]
    19 -> 22 [ ]
    22 -> 24 [ ]
    23 -> 24 [ ]
    24 -> 25 [ ]
    24 -> 26 [ ]
    26 -> 27 [ ]
    26 -> 28 [ ]
}

