crates/oxc_semantic/tests/snapshots/cfg__cfg_files@function_in_finally.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/function_in_finally.js
---
digraph {
    0 [ label = ""]
    1 [ label = ""]
    2 [ label = "$0 = Constant(<\"try\">)"]
    3 [ label = "Unreachable()"]
    4 [ label = ""]
    5 [ label = "$1 = Constant(<\"should_be_created_twice_in_cfg\">)"]
    6 [ label = "$2 = Function{}\n$3 = Constant(<\"finally\">)"]
    7 [ label = ""]
    8 [ label = ""]
    9 [ label = "$2 = Function{}\n$3 = Constant(<\"finally\">)"]
    10 [ label = "$1 = Constant(<\"should_be_created_twice_in_cfg\">)"]
    2 -> 1 [ ]
    1 -> 3 [ ]
    4 -> 5 [ ]
    4 -> 6 [ ]
    0 -> 2 [ ]
    8 -> 9 [ ]
    8 -> 10 [ ]
    2 -> 4 [ ]
    6 -> 7 [ ]
    2 -> 1 [ ]
    1 -> 8 [ ]
    0 -> 8 [ ]
}

