crates/oxc_semantic/tests/snapshots/cfg__cfg_files@indexing_into_class_expression.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/indexing_into_class_expression.js
---
digraph {
    0 [ label = "$1 = ClassMadeWithExpressions{}\n$0 = Constant(<1>)\n$2 = $1[$0]\n$3 = ClassMadeWithExpressions{}\n$4 = $3.a"]
}

