crates/oxc_semantic/tests/snapshots/cfg__cfg_files@infix_operators.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/infix_operators.js
---
digraph {
    0 [ label = "$0 = Reference(<a>)\n$1 = Reference(<b>)\n$2 = $0 instanceof $1\n$3 = Reference(<a>)"]
    1 [ label = "$4 = Reference(<b>)\n$6 = $3 && $4"]
    2 [ label = "$5 = $3"]
    3 [ label = ""]
    0 -> 2 [ ]
    0 -> 1 [ ]
    1 -> 3 [ ]
    2 -> 3 [ ]
}

