crates/oxc_semantic/tests/snapshots/cfg__cfg_files@labeled_block_break.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/labeled_block_break.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$0 = Reference(<condition>)"]
    2 [ label = ""]
    3 [ label = ""]
    4 [ label = "Unreachable()"]
    5 [ label = ""]
    6 [ label = ""]
    2 -> 1 [ ]
    3 -> 4 [ ]
    4 -> 5 [ ]
    1 -> 3 [ ]
    1 -> 5 [ ]
    3 -> 5 [ ]
    0 -> 2 [ ]
    2 -> 1 [ ]
    5 -> 6 [ ]
    2 -> 6 [ ]
    0 -> 1 [ ]
}

