crates/oxc_semantic/tests/snapshots/cfg__cfg_files@labelled_try_break.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/labelled_try_break.js
---
digraph {
    0 [ label = ""]
    1 [ label = ""]
    2 [ label = ""]
    3 [ label = "$return = Constant(<0>)"]
    4 [ label = "Unreachable()"]
    5 [ label = "Unreachable()"]
    6 [ label = ""]
    7 [ label = "Unreachable()"]
    8 [ label = "$return = Constant(<1>)"]
    9 [ label = ""]
    10 [ label = "Unreachable()"]
    11 [ label = "Unreachable()"]
    12 [ label = "$0 = Function{}"]
    0 -> 1 [ ]
    3 -> 2 [ ]
    4 -> 2 [ ]
    3 -> 4 [ ]
    2 -> 5 [ ]
    6 -> 7 [ ]
    1 -> 3 [ ]
    9 -> 10 [ ]
    4 -> 6 [ ]
    7 -> 8 [ ]
    4 -> 2 [ ]
    2 -> 9 [ ]
    1 -> 9 [ ]
    6 -> 8 [ ]
    8 -> 11 [ ]
    0 -> 12 [ ]
}

