crates/oxc_semantic/tests/snapshots/cfg__cfg_files@logical_expressions_short_circuit.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/logical_expressions_short_circuit.js
---
digraph {
    0 [ label = "$0 = Constant(<true>)"]
    1 [ label = "$1 = Constant(<false>)\n$3 = $0 || $1"]
    2 [ label = "$2 = $0"]
    3 [ label = ""]
    4 [ label = "$4 = Constant(<\"or\">)"]
    5 [ label = "$5 = Constant(<true>)"]
    6 [ label = "$6 = Constant(<false>)\n$8 = $5 && $6"]
    7 [ label = "$7 = $5"]
    8 [ label = ""]
    9 [ label = "$9 = Constant(<\"and\">)"]
    10 [ label = "$10 = Reference(<x>)"]
    11 [ label = "$11 = Reference(<y>)\n$13 = $10 ?? $11"]
    12 [ label = "$12 = $10"]
    13 [ label = ""]
    14 [ label = "$14 = Constant(<\"and\">)"]
    15 [ label = ""]
    0 -> 2 [ ]
    0 -> 1 [ ]
    1 -> 3 [ ]
    2 -> 3 [ ]
    4 -> 5 [ ]
    3 -> 4 [ ]
    3 -> 5 [ ]
    5 -> 7 [ ]
    5 -> 6 [ ]
    6 -> 8 [ ]
    7 -> 8 [ ]
    9 -> 10 [ ]
    8 -> 9 [ ]
    8 -> 10 [ ]
    10 -> 12 [ ]
    10 -> 11 [ ]
    11 -> 13 [ ]
    12 -> 13 [ ]
    14 -> 15 [ ]
    13 -> 14 [ ]
    13 -> 15 [ ]
}

