crates/oxc_semantic/tests/snapshots/cfg__cfg_files@member_access_with_numbered_index.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/member_access_with_numbered_index.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$1 = Reference(<a>)\n$2 = $1.c\n$3 = $2.x\n$4 = $3.y\n$0 = Constant(<12>)\n$return = $4[$0]"]
    2 [ label = "Unreachable()\n$return = Constant(<false>)"]
    3 [ label = "Unreachable()"]
    4 [ label = "$5 = Function{}"]
    0 -> 1 [ ]
    1 -> 2 [ ]
    2 -> 3 [ ]
    0 -> 4 [ ]
}

