crates/oxc_semantic/tests/snapshots/cfg__cfg_files@member_access_with_unreachable.js-2.snap
---
source: crates/oxc_semantic/tests/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/cfg_fixtures/member_access_with_unreachable.js
---
digraph {
    0 [ label = ""]
    1 [ label = "$2 = Reference(<x>)\n$3 = $2.y\n$4 = $3.z\n$0 = Reference(<the>)\n$1 = $0.key\n$return = $4[$1]"]
    2 [ label = "Unreachable()\n$return = Constant(<true>)"]
    3 [ label = "Unreachable()"]
    4 [ label = "$5 = Function{}"]
    0 -> 1 [ ]
    1 -> 2 [ ]
    2 -> 3 [ ]
    0 -> 4 [ ]
}

